<resources>
    <string name="app_name">Cuenta pochas</string>
    <string name="app_name_one">Cuenta</string>
    <string name="app_name_two">Pochas</string>
    <string name="content_description">image</string>

    <!-- ADS -->

    <!-- ERROR -->
    <string name="sww">Vaya, algo ha salido mal</string>
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- MENU -->
    <string name="create_room">Nuevo juego</string>"
    <string name="room_creation_date">Creado el %s</string>"

    <!-- ROOMS -->
    <string name="room_name_title">Nombre del juego:</string>
    <string name="room_name">Nombre</string>
    <string name="room_players_title">%s jugadores:</string>
    <string name="room_points_title">Puntos:</string>
    <string name="room_points_plus">+</string>
    <string name="room_points_minus">-</string>
    <string name="room_points_bad">Por perder:</string>
    <string name="room_points_ok_base">Por acertar de base:</string>
    <string name="room_points_ok_extra">Por acierto extra:</string>

    <string name="room_delete_title">Borrar juego</string>
    <string name="room_delete_description">Esto sirve para borrar el juego. Pulsa el botón <b>Borrar juego</b> si quieres, obviamente, borrar el juego. El juego se borrará.</string>
    <string name="room_delete_btn">Borrar</string>

    <string name="no_players">No hay jugadores</string>
    <string name="no_rooms">Ni un mísero juego creado hay</string>
    <string name="add_player_title">Ponle un nombre bien guapo</string>
    <string name="add_player">Añadir jugador</string>
    <string name="player_default">Jugador sin nombre</string>
    <string name="ready">Listo</string>

    <string name="players_new_name_hint_add">Pulsa para añadir el nombre</string>
    <string name="players_new_name_hint">Nuevo jugador</string>
    <string name="players_new_name">Añadir jugador</string>
    <string name="players_edit_name">Editar nombre</string>
    <string name="players_points">Puntos:</string>
    <string name="players_reset_points">Resetear puntos</string>
    <string name="players_delete">Eliminar jugador</string>

    <string name="players_winner">Ganando: %s</string>
</resources>