<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_dialog"
        android:backgroundTint="@color/light_red"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_error"
            android:visibility="invisible"
            app:tint="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/MediumTextView_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            android:text="@string/room_delete_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/btn_accept"
            style="@style/MediumTextView_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/click_effect"
            android:backgroundTint="@color/light_red"
            android:elevation="6dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/room_delete_btn"
            android:textAllCaps="true" />

    </LinearLayout>

</LinearLayout>